<resources>
    <string name="app_name">wisataTasoppeng</string>
    <string name="tamankalong">Soppeng - Taman Kalong yang berada di Watansoppeng kini menjadi magnet wisata baru di kota Soppeng, Sulawesi Selatan. Setiap malam ratusan warga setempat datang berkunjung untuk menghabiskan waktu di tempat tersebut.Keberadaan kalong (kelelawar) di jantung kota Watansoppeng semakin menambah pesona kota ini, karena kota Watansoppeng dijuluki sebagai  kota kalong. Uniknya, kalong ini hanya mau berdiam dan bergelantungan di pepohonan sepanjang kota Watansoppeng.

Menjelang matahari tenggelam di ufuk barat kota, kalong ini mulai  beterbangan untuk mencari makanan dan menjelang matahari terbit di ufuk timur seiring gema suara adzan subuh, kalong ini kembali ke tempatnya dengan suara yang khas (berisik) seakan membangunkan masyarakat kota Watansoppeng untuk memulai aktivitasnya.

    </string>
    <string name="lerenghijau">Pemandangan indah nan memanjakan mata akan terasa saat kita berkunjung di Kolam Renang Gattareng. Salah satu destinasi wisata di Kabupaten Soppeng ini terletak di Desa Gattareng Toa Kecamatan Marioriwawo

Selain itu pengunjung juga akan merasakan sejuknya udara di lokasi permandian karna dibangun disekitar lereng hijau Lembah Bulu Dua, Soppeng yang juga berbatasan dengan Kabupaten Barru.


Fasilitas kolam renang lereng hijau bulu dua soppeng ini juga tak kalah dengan tempat wisata lainnya, selain kita dapat berenang di air kolam yang sejuk, kita juga dapat beristerahat sambil makan siang di Gazebonya. Juga terdapat fasilitas karoke untuk acara Family Gathering.

Bagi pengunjung yang ingin menikmati destinasi wisata ini tidak usah khawatir soal biaya masuk. Karna harga karcis untuk sekali masuk hanya sebesar Rp10.000 bagi orang dewasa dan Rp5000 untuk anak-anak.</string>
    <string name="waduk">Kabupaten Soppeng juga memiliki sebuah wisata yang terbilang unik, yaitu Waduk Ompo. Waduk ini sejatinya merupakan sebuah danau yang diubah menjadi salah destinasi liburan. Pengunjung bisa berkeliling menggunakan sepeda air berbentuk bebek dengan tarif Rp20.000 per orang.

Selain sepeda air, Waduk Ompo juga memiliki jembatan di bagian tengahnya. Jembatan ini menghubungkan jalanan tepi danau dengan warung kopi atau kafe di tengah-tengah danau.</string>
    <string name="geografi">Geografi Dan Iklim
Soppeng merupakan salah satu kabupaten dari 24 Kabupaten/Kota di Provinsi Sulawesi Selatan yang beribukota di Watansoppeng.Berada pada 4°6’00’’ hingga 4°32’00’’ Lintang Selatan  dan  119°47’18”  hingga  120°06’13”Bujur Timur. Wilayah Soppeng memiliki luas sekitar 1.500 km2 dengan ketinggian antara 5 hingga 1500 meter dari permukaan laut. Kabupaten Soppeng tidak memiliki daerah pesisir, sekitar 77% dari total desa/kelurahan diSoppeng bertopografi dataran.</string>
    <string name="selayang1">Kabupaten Soppeng dilalui beberapa sungai sebagai sumber yang berpotensi dimanfaatkan sebagai pengairan yaitu sungai langkemme, sungai soppeng, sungai lawo,sungai paddangeng dan sungai lajaroko.

– Wilayah Soppeng terbagi menjadi 8 kecamatan, meliputi Kecamatan Marioriwawo, Lalabata, Liliriaja, Ganra, Citta, Lilirilau, Donri-Donri, dan Marioriawa. Marioriawa menjadi kecamatan terluas, dengan luas wilayah sebesar 320 km2 atau sekitar 21,3 persen dari total luas Kabupaten Soppeng. Sedangkan
Citta merupakan kecamatan dengan luas wilayah terkecil, yaitu hanya 40 km2 atau 2,7 persen dari total luas Kabupaten Soppeng.

Soppeng memiliki jarak yang relatif terjangkau dari pusat kabupaten. Jarak dari kecamatan menuju ibukota kabupaten berkisar antara 0 km hingga 35 km. Dengan jarak dari ibukota kabupaten sebesar 35 km, kecamatan Citta menjadi kecamatan terjauh dari ibukota Soppeng. Sedangkan Lalabata yang beribukota di Watansoppeng adalah kecamatan terdekat, sekaligus menjadi ibukota kabupaten serta pusat pemerintahan dan perekonomian di wilayah Soppeng.(Sumber:Statistik Daerah Kabupaten Soppeng 2015).</string>
    <string name="pemerintahan">Selama periode tahun 2012 hingga 2014, jumlah kecamatan di Soppeng tidak mengalami perubahan, masih berjumlah 8 kecamatan. Pemekaran terakhir terjadi pada tahun 2007 yaitu pada saat terbentuknya Kecamatan Citta. Jumlah desa/kelurahan juga tidak mengalami perubahan yaitu sebanyak 70 desa/kelurahan.Demikian halnya dengan jumlah dusun dan lingkungan dalam 3 tahun terakhir tercatat masih tetap yaitu berjumlah 163 dusun dan lingkungan.

Jumlah Pegawai Negeri Sipil (PNS) pada instansi daerah maupun instansi vertikal di lingkup pemerintahan Kabupaten Soppeng tercatat meningkat dari 6.964 orang pada tahun 2013 menjadi 7.169 pada tahun 2014. Kenaikan ini dipengaruhi oleh banyaknya pegawai yang mencapai masa purna bakti dan mutasi pegawai yang kurang seimbang dengan jumlah penerimaan pegawai baru.

Dilihat berdasarkan komposisi pegawai menurut jenis kelamin, terlihat pada periode tahun 2012 hingga 2014 jumlah pegawai perempuan di Soppeng relatif lebih banyak daripada jumlah pegawai laki-laki. Bahkan pada tahun 2014, jumlah pegawai perempuan mencapai 3.943 orang sedangkan pegawai laki-laki hanya berjumlah 3.226 orang.

Dari segi pendidikan yang ditamatkan, Pegawai Negeri Sipil di Kabupaten Soppeng terlihat mempunyai kualitas yang cukup baik. Hal ini ditunjukkan dengan kecilnya persentase jumlah pegawai yang berpendidikan SMU ke bawah, yakni hanya sekitar 13,54 persen. Pada tahun 2014 tercatat PNS Soppeng sebanyak 11,96 persen adalah tamatan diploma (D1-D3), bahkan lulusan sarjana (D4/S1 dan S2) mencapai 74,49 persen dari total PNS.

Pada tahun 2014, realisasi APBD Kabupaten Soppeng mencapai 846,23 milyar rupiah, angka ini mengalami kenaikan 11,19 persen dibanding tahun 2013. Sumber pendapatan Kabupaten Soppeng terbesar berasal dari DAU, yang menyumbang sebesar 569,12 milyar rupiah atau sekitar 67,25 persen dari total pendapatan. Sedangkan PAD hanya menyumbang sebesar 60,34 milyar rupiah atau sekitar 7,13 persen terhadap total pendapatan. Dari sisi belanja, pada periode 2012-2014 angka belanja daerah mengalami kenaikan hingga13,45 persen. Kenaikan ini disebabkan naiknya belanja tidak langsung sebesar 485,33 milyar rupiah atau sekitar 5,75 persen dari tahun 2013. Belanja langsung tahun 2014 juga mengalami kenaikan yang cukup signifikan yaitu sekitar 25,95 persen dibanding tahun 2013.</string>
    <string name="penduduk">Jumlah penduduk Kabupaten Soppeng tahun 2014 mencapai 225.709 jiwa yang terdiri dari 106.206 laki-laki dan 119.503 perempuan. Angka jumlah penduduk ini mengalami pertumbuhan sekitar 0,087 persen dibanding tahun 2013.

Secara umum jumlah penduduk perempuan di Kabupaten Soppeng masih lebih tinggi dibandingkan jumlah penduduk laki-laki. Hal ini juga dapat ditunjukkan oleh angka sex ratio Kabupaten Soppeng sebesar 89, artinya untuk setiap 100 penduduk perempuan terdapat 89 penduduk laki-laki.

Tingkat kepadatan penduduk Soppeng masih berada dalam angka wajar, tercatat sebanyak 150 penduduk menghuni setiap km2 wilayah Soppeng pada tahun 2014.

Komposisi penduduk Soppeng didominasi oleh penduduk muda. Berdasarkan piramida penduduk disamping persentase penduduk terbanyak berada pada kelompok usia 10-14 tahun. Apabila dicermati lebih jauh, perbandingan antara persentase jumlah penduduk laki-laki dan perempuan pada setiap kelompok umur didominasi oleh penduduk perempuan.

Presentase penduduk usia kerja di Kabupaten Soppeng tahun 2014 sebesar 65,41%. Angka ketergantungan (dependency ratio) Kabupaten Soppeng sebesar 53 yang berarti untuk setiap 100 orang penduduk berusia kerja (dianggap produktif) menanggung sebanyak 53 orang yang belum produktif dan dianggap tidak produktif lagi.Apabila dilihat per kecamatan, pada tahun2014 Marioriwawo menjadi kecamatan dengan penduduk terbanyak di Soppeng mencapai 44.631 jiwa. Kepadatan penduduk tertinggi justru berada di wilayah Kecamatan Liliriaja yang tercatat 283 jiwa tiap km2. Jumlah penduduk terendah berada di Kecamatan Citta.

Kepadatan penduduk terendah terjadi di Kecamatan Marioriawa, yakni hanya 88 jiwa tiap km2. Perbandingan jumlah penduduk laki-laki dan perempuan (sex ratio) untuk tiap kecamatan diKabupaten Soppeng seluruhnya bernilai di bawah 100. Hal ini berarti jumlah penduduk perempuan di tiap kecamatan lebih banyak dibanding jumlah penduduk laki-laki. Angka sex ratio terbesar berada di Kecamatan Lalabata dan Marioriawa, mencapai 92, dan yang terendah berada di Kecamatan Citta sebesar 82.
    </string>
    <string name="ketenagakerjaan">Dari total penduduk usia kerja (15 tahun ke atas), lebih dari setengah penduduk Soppeng termasuk dalam angkatan kerja. Tingkat partisipasi angkatan kerja (TPAK) mengalami kenaikan dari 57,22 pada tahun 2013 menjadi  57,59 pada tahun 2014.

Pasar tenaga kerja Soppeng tergambar dari persentase penduduk usia kerja yang bekerja, pada tahun 2014 besarannya juga mengalami kenaikan menjadi 97,57 persen dari 93,44 persen pada tahun 2013.

Sejalan dengan kenaikan tingkat kesempatan kerja, angka pengangguran terbuka Soppeng tahun 2014 mengalami penurunan sekitar 4,13 persen, yakni dari 6,56 persen pada tahun 2013 menjadi 2,43 persen tahun 2014.

Berdasarkan perbandingan menurut tiga sektor utama, pada tahun 2014, pilihan bekerja di sektor pertanian (A) masih mendominasi pasar kerja di Soppeng yaitu sebesar 55,35 persen.

Selanjutnya yang cukup diminati adalah sektor jasa-jasa (S) dengan persentase sebesar 17,19 persen. Sedangkan pekerja di sektor perdagangan, hotel dan restoran (T) sebanyak 13,08 persen dan sisanya terdistribusi ke sektor-sektor lainnya. Komposisi tersebut tampaknya tidak banyak mengalami perubahan selama kurun waktu 2012-2014.</string>
</resources>