<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".SelayangPandang">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/toobargambar"
        android:orientation="vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:background="#77131D66"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="20dp"
                android:text="SELAYANG PANDANG"
                android:textSize="25dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="146dp"
                android:text="@string/geografi"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1513dp"
            android:background="#77131D66"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="~Luas Wilayah Kabupaten Soppeng 1.500 km2 dengan batas-batas wilayah" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sebelah Utara berbatasan dengan Kabupaten Sidenreng Rappang." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="~Sebelah Timur  berbatasan dengan Kabupaten Wajo." />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="~Sebelah Selatan berbatasan dengan Kabupaten Bone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="~Sebelah Barat berbatasan dengan Kabupaten Barru" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/selayang1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Pemerintahan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pemerintahan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Penduduk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="392dp"
                android:text="@string/penduduk" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Ketenagakerjaan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="392dp"
                android:text="@string/ketenagakerjaan" />


        </LinearLayout>
    </LinearLayout>

</ScrollView>